[package]
name = "cycle_match"
version = "0.1.6"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/Cycle_match.git"
homepage = "https://crates.io/crates/cycle_match"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

description = "Convenient macros for combining cycles (for, while, loop) with a match."
keywords = ["macro", "while-match-macro", "for-match-macro", "no_std", "clucompany"]
categories = ["development-tools"]

[dependencies]
